--- a/src/components/SmallFooter/SmallFooter.module.scss
+++ b/src/components/SmallFooter/SmallFooter.module.scss
@@ -1,8 +1,8 @@
 .footer {
   height: 57px;
-  // width: 100vw;
   background: #1c3b55;
   color: #ffffff;
+  bottom: 0;
 
   &_container {
     max-width: 1024px;
