--- a/src/components/SmallHeader/SmallHeader.module.scss
+++ b/src/components/SmallHeader/SmallHeader.module.scss
@@ -3,14 +3,18 @@
   background: #3a80ba;
   padding-top: 15px;
 
+  &_container {
+    margin: 0 auto;
+    width: 1024px;
+  }
+
   &_logo {
-    margin-left: 130px;
     text-decoration: none;
     font-family: "Montserrat", sans-serif;
     font-size: 40px;
     line-height: 49px;
     color: #ffffff;
     align-self: center;
-    height: 100%; 
+    height: 100%;
   }
 }
