--- a/src/components/StatsPage/Table/Table.module.scss
+++ b/src/components/StatsPage/Table/Table.module.scss
@@ -1,13 +1,36 @@
+@import "../../../sass/state";
+
+.container {
+  width: 1180px;
+  margin: 0 auto;
+}
+
+.history {
+  margin-top: 16px;
+
+  &_link {
+    @include history_prev_link;
+  }
+
+  &_curent {
+    color: #3a80ba;
+    cursor: pointer;
+  }
+}
+
+.history svg {
+  margin: 0 8px;
+}
+
 .title {
   font-weight: bold;
   font-size: 32px;
   line-height: 39px;
-  margin: 0;
-  margin: 60px 0 0 130px;
+  // margin: 60px 0 0 130px;
 }
 
 .table {
-  width: 1180px;
+  width: 100%;
   margin: 16px auto 0;
   border-collapse: separate;
   border-radius: 1em;
@@ -40,6 +63,13 @@
 
     &_id {
       width: 64px;
+    }
+
+    &_gender,
+    &_first_name,
+    &_last_name,
+    &_ip_address {
+      width: 150px;
     }
 
     &_id,
