--- a/src/sass/_state.scss
+++ b/src/sass/_state.scss
@@ -9,6 +9,13 @@
   cursor: pointer;
 }
 
+@mixin history_prev_link {
+  text-decoration: none;
+  font-size: 16px;
+  line-height: 20px;
+  color: #cccccc;
+}
+
 @mixin buttonBlue {
   width: 220px;
   height: 56px;
